--- a/style.css
+++ b/style.css
@@ -50,3 +50,21 @@
 #dashboard > li.done {
     -webkit-transform: rotateY(0);
 }
+
+#menu_home {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: #eee;
+  top: 0;
+  left: 0;
+}
+
+#menu_complete {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: #777;
+  bottom: 0;
+  right: 0;
+}
