--- a/style.css
+++ b/style.css
@@ -62,6 +62,20 @@
 
 #menu_complete {
   position: absolute;
+  width: 100%;
+  height: 200px;
+  background-color: #999;
+  bottom: 0;
+  right: 0;
+}
+
+#menu_complete.collapse {
+  width: 50px;
+  height: 50px;
+}
+
+#completeCollapse {
+  position: absolute;
   width: 50px;
   height: 50px;
   background-color: #777;
