--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 *{margin: 0; padding: 0;}
+body, html, #quizzesContainer {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
 #dashboard {
   position: absolute;
   top: 0;
@@ -9,7 +14,6 @@
   list-style: none inside none;
   width: 100vw;
   height: 100vw;
-  -webkit-perspective: 1;
 }
 
 #dashboard > li {
@@ -19,7 +23,8 @@
   height: 31vw;
   float: left;
   border: 1vw solid #fff;
-  -webkit-transform: rotateY(180deg);
+  -webkit-transition: -webkit-transform 1s linear;
+  -webkit-transform: rotateY(180.5deg);
   -webkit-transform-style: preserve-3d;
 }
 #dashboard > li:before {
@@ -55,9 +60,42 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #eee;
+  background-color: #F79C56;
   top: 0;
   left: 0;
+  z-index: 100;
+}
+#menu_home > div {
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  background-color: #C26319;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+#menu_home > div:before,
+#menu_home > div:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: #C26319;
+}
+#menu_home > div:before {
+  right: -12px;
+}
+#menu_home > div:after {
+  left: -12px;
+}
+#menu_home > div:first-child {
+  -webkit-transform: translateY(-12px);
+}
+#menu_home > div:last-child {
+  -webkit-transform: translateY(12px);
 }
 
 #menu_complete {
@@ -67,18 +105,146 @@
   background-color: #999;
   bottom: 0;
   right: 0;
+  z-index: 100;
 }
 
 #menu_complete.collapse {
   width: 50px;
   height: 50px;
+  opacity: 0.8;
+}
+#menu_complete.collapse input, #menu_complete.collapse button {
+  display: none;
 }
 
 #completeCollapse {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #777;
+  background-color: #439403;
   bottom: 0;
   right: 0;
+}
+#completeCollapse:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 5px;
+  height: 16px;
+  background-color: #396913;
+  -webkit-transform: skew(30deg, 0) translate(-8px, 3px);
+}
+#completeCollapse:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 5px;
+  height: 25px;
+  background-color: #396913;
+  -webkit-transform: skew(-30deg, 0) translate(5px, -1px);
+}
+
+/* CRYPTO */
+#quiz_cryptoword {
+    height: 100%;
+    overflow: hidden;
+}
+#cryptWord {
+  text-align: center;
+  height: 20vh;
+  background-color: #eee;
+  line-height: 20vh;
+  font-size: 65px;
+  letter-spacing: 5vw;
+  color: #333;
+}
+#cryptAddHint {
+  position: absolute;
+  display: none;
+  width: 50px;
+  height: 50px;
+  top: 0;
+  right: 0;
+  background-color: #5C7CE0;
+  z-index: 2;
+}
+#cryptAddHint.visible {
+  display: block;
+}
+#cryptAddHint:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 25px;
+  height: 5px;
+  background-color: #2F209B;
+}
+#cryptAddHint:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 5px;
+  height: 25px;
+  background-color: #2F209B;
+}
+#cryptHints {
+  height: 64vh;
+  overflow: auto;
+}
+#cryptHints li {
+  display: none;
+  border-bottom: 3px dashed #bbb;
+  padding: 2vh;
+  font-size: 25px;
+}
+#cryptHints li.visible {
+  display: block;
+}
+#cryptAlphabet {
+  position: absolute;
+  bottom: 0;
+  background-color: #4046CA;
+  width: 96vw;
+  height: 74vh;
+  z-index: 2;
+  padding: 3vh 2vw;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  -webkit-transform: translate3d(0, 64vh, 0);
+}
+#cryptAlphabet.enable {
+  -webkit-transform: translate3d(0, 0, 0);
+}
+#cryptAlphabet li {
+  display: inline-block;
+  width: 14vw;
+  height: 14vw;
+  line-height: 14vw;
+  text-align: center;
+  background-color: #5C7CE0;
+  margin: 1vw;
+  font-size: 8vw;
+  color: #180B7A;
+}
+#cryptAlphabet li.inWord {
+  border: 1vw solid #7A5011;
+  width: 12vw;
+  height: 12vw;
+  line-height: 12vw;
+  color: #7A5011;
 }
