--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ body, html, #quizzesContainer {
 
 #menu_home {
   position: absolute;
-  width: 10vh;
-  height: 10vh;
-  background-color: #F79C56;
+  width: 15vh;
+  height: 15vh;
+  background-color: #4C57D6;
   top: 0;
   left: 0;
   z-index: 100;
@@ -74,7 +74,7 @@ body, html, #quizzesContainer {
   position: absolute;
   width: 2vh;
   height: 2vh;
-  background-color: #C26319;
+  background-color: #182292;
   top: 0;
   bottom: 0;
   left: 0;
@@ -88,19 +88,19 @@ body, html, #quizzesContainer {
   width: 100%;
   height: 100%;
   top: 0;
-  background-color: #C26319;
+  background-color: #182292;
 }
 #menu_home > div:before {
-  right: -2.6vh;
+  right: -3.3vh;
 }
 #menu_home > div:after {
-  left: -2.6vh;
+  left: -3.3vh;
 }
 #menu_home > div:first-child {
-  -webkit-transform: translateY(-2.6vh);
+  -webkit-transform: translateY(-3.3vh);
 }
 #menu_home > div:last-child {
-  -webkit-transform: translateY(2.6vh);
+  -webkit-transform: translateY(3.3vh);
 }
 
 #menu_complete {
@@ -114,8 +114,8 @@ body, html, #quizzesContainer {
 }
 
 #menu_complete.collapse {
-  width: 10vh;
-  height: 10vh;
+  width: 15vh;
+  height: 15vh;
   opacity: 0.8;
 }
 #menu_complete.collapse input, #menu_complete.collapse button {
@@ -124,25 +124,13 @@ body, html, #quizzesContainer {
 
 #completeCollapse {
   position: absolute;
-  width: 10vh;
-  height: 10vh;
+  width: 15vh;
+  height: 15vh;
   background-color: #439403;
   bottom: 0;
   right: 0;
 }
-#completeCollapse:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 5px;
-  height: 16px;
-  background-color: #396913;
-  -webkit-transform: skew(30deg, 0) translate(-8px, 3px);
-}
+#completeCollapse:before,
 #completeCollapse:after {
   content: '';
   position: absolute;
@@ -151,10 +139,15 @@ body, html, #quizzesContainer {
   left: 0;
   right: 0;
   margin: auto;
-  width: 5px;
+  width: 9px;
   height: 25px;
-  background-color: #396913;
-  -webkit-transform: skew(-30deg, 0) translate(5px, -1px);
+  background-color: #2A500C;
+  border-radius: 40%;
+  -webkit-transform: skew(30deg, 0) translate(-11px, 4px);
+}
+#completeCollapse:after {
+  height: 36px;
+  -webkit-transform: skew(-30deg, 0) translate(8px, -1px);
 }
 
 /* ============ CRYPTO ================*/
@@ -166,11 +159,12 @@ body, html, #quizzesContainer {
 #cryptWord {
   text-align: center;
   height: 20vh;
-  background-color: #eee;
+  background-color: #CBD8FF;
   line-height: 20vh;
-  font-size: 65px;
+  font-size: 15vw;
   letter-spacing: 5vw;
-  color: #333;
+  color: #0A2A8A;
+  padding: 0 13vw 0 25vw;
 }
 #cryptAddHint {
   position: absolute;
@@ -179,13 +173,14 @@ body, html, #quizzesContainer {
   height: 50px;
   top: 0;
   right: 0;
-  background-color: #5C7CE0;
+  background-color: #5C66DD;
   z-index: 2;
 }
 #cryptAddHint.visible {
   display: block;
 }
-#cryptAddHint:before {
+#cryptAddHint:before,
+#cryptAddHint:after {
   content: '';
   position: absolute;
   top: 0;
@@ -195,47 +190,49 @@ body, html, #quizzesContainer {
   margin: auto;
   width: 25px;
   height: 5px;
-  background-color: #2F209B;
+  background-color: #182292;
 }
 #cryptAddHint:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
   width: 5px;
   height: 25px;
-  background-color: #2F209B;
 }
 #cryptHints {
-  height: 64vh;
+  position: absolute;
+  bottom: 0;
+  height: 80vh;
   overflow: auto;
+  z-index: 2;
+  background-color: #0A2A8A;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  -webkit-transform: translate3d(0, 65vh, 0);
+}
+
+#cryptHints.enable {
+  -webkit-transform: translate3d(0, 0, 0);
+}
+#cryptHints > ul {
+  height: 61vh;
+  overflow: auto;
+  border-bottom: 1px solid #CBD8FF;
+  padding: 2vh;
 }
 #cryptHints li {
   display: none;
-  border-bottom: 3px dashed #bbb;
+  border-bottom: 3px dashed #CBD8FF;
   padding: 2vh;
   font-size: 25px;
+  color: #CBD8FF;
 }
 #cryptHints li.visible {
   display: block;
 }
 #cryptAlphabet {
-  position: absolute;
-  bottom: 0;
-  background-color: #4046CA;
   width: 96vw;
-  height: 74vh;
-  z-index: 2;
+  height: 64vh;
+  z-index: 1;
   padding: 3vh 2vw;
   overflow: auto;
-  -webkit-transition: -webkit-transform 0.3s linear;
-  -webkit-transform: translate3d(0, 64vh, 0);
-}
-#cryptAlphabet.enable {
-  -webkit-transform: translate3d(0, 0, 0);
+  
 }
 #cryptAlphabet li {
   display: inline-block;
@@ -243,17 +240,17 @@ body, html, #quizzesContainer {
   height: 14vw;
   line-height: 14vw;
   text-align: center;
-  background-color: #5C7CE0;
+  background-color: #CBD8FF;
   margin: 1vw;
   font-size: 8vw;
-  color: #180B7A;
+  color: #0A2A8A;
 }
 #cryptAlphabet li.inWord {
-  border: 1vw solid #7A5011;
+  border: 1vw solid #0A2A8A;
   width: 12vw;
   height: 12vw;
   line-height: 12vw;
-  color: #7A5011;
+  background-color: #ABBCF0;
 }
 
 /* ============ MELODI ================*/
@@ -261,9 +258,9 @@ body, html, #quizzesContainer {
 #quiz_melodi .note1 { background-color: #ff0000; }
 #quiz_melodi .note2 { background-color: #00ff00; }
 #quiz_melodi .note3 { background-color: #0000ff; }
-#quiz_melodi .note4 { background-color: #aa553e; }
-#quiz_melodi .note5 { background-color: #fa35d1; }
-#quiz_melodi .note6 { background-color: #8a7f11; }
+#quiz_melodi .note4 { background-color: #ffec00; }
+#quiz_melodi .note5 { background-color: #dc3cf1; }
+#quiz_melodi .note6 { background-color: #ffa500; }
 
 #musicNote {
   text-align: center;
@@ -297,8 +294,8 @@ body, html, #quizzesContainer {
 }
 #musicPhaseNote {
   text-align: center;
-  padding: 3vh 6vw;
-  height: 40vh;
+  padding: 3vh 16vw;
+  height: 30vh;
   overflow: auto;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
@@ -306,9 +303,9 @@ body, html, #quizzesContainer {
 #musicPhaseNote li {
   display: none;
   position: relative;
-  width: 17vw;
-  height: 17vw;
-  line-height: 17vw;
+  width: 12vw;
+  height: 12vw;
+  line-height: 12vw;
   float: left;
   border: 1px solid #bbb;
   margin: 2vw;
@@ -324,20 +321,22 @@ body, html, #quizzesContainer {
 #musicInfo {
   position: absolute;
   width: 100%;
-  height: 90vh;
+  height: 85vh;
   bottom: 0;
+  z-index: 10;
   background-color: #888;
   -webkit-transition: -webkit-transform 0.3s linear;
-  -webkit-transform: translateY(80vh);
+  -webkit-transform: translateY(70vh);
 }
 #musicInfo.open {
   -webkit-transform: translateY(0);
 }
 #musicMessageBoard {
-  height: 10vh;
+  height: 15vh;
   text-align: center;
-  line-height: 10vh;
+  line-height: 15vh;
   font-size: 4vh;
+  padding: 0 10vh 0 16vh;
   color: #222;
 }
 
@@ -411,6 +410,47 @@ body, html, #quizzesContainer {
   border-top: 7px solid transparent; 
   border-bottom: 7px solid transparent; 
   -webkit-transform: translate(9px, -7px);
+}
+#musicRepeat {
+  position: absolute;
+  top: 16vh;
+  right: 0;
+  width: 8vh;
+  height: 8vh;
+  border-left: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+  border-top: 1px solid #aaa;
+}
+#musicRepeat.hidden {
+  display: none;
+}
+#musicRepeat:before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border-left: 3px solid #888;
+  border-top: 3px solid #888;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  -webkit-transform: rotateZ(-45deg) skew(10deg, 10deg);
+}
+#musicRepeat:after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border-left: 3px solid #888;
+  border-top: 3px solid #888;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  -webkit-transform: rotateZ(-45deg) skew(10deg, 10deg) translate(6px, 6px);
 }
 
 /* ============ INSTA ================*/
