--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@ body, html, #quizzesContainer {
 
 .messageBoard {
   text-align: center;
+  width: 62vw;
   height: 15vh;
   background-color: #CBD8FF;
   line-height: 15vh;
   font-size: 7vw;
   color: #0A2A8A;
   padding: 0 13vw 0 25vw;
+  overflow: hidden;
 }
 .infoBoard {
   position: absolute;
@@ -77,34 +79,53 @@ body, html, #quizzesContainer {
   right: 0;
   margin: auto;
   list-style: none inside none;
-  width: 100vw;
-  height: 100vw;
+  width: 84vw;
+  height: 126vw;
 }
 
 #dashboard > li {
   position: relative;
   display: block;
-  width: 31vw;
-  height: 31vw;
+  width: 40vw;
+  height: 40vw;
   float: left;
   border: 1vw solid #fff;
   -webkit-transition: -webkit-transform 1s linear;
-  -webkit-transform: rotateY(180.5deg);
+  -webkit-transform: rotateY(180deg);
   -webkit-transform-style: preserve-3d;
 }
-#dashboard > li:before {
-  content: '';
+#dashboard .quizFront {
   position: absolute;
   display: block;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #93D37B;
+  background: #222 no-repeat center;
+  background-size: contain;
   -webkit-backface-visibility: hidden;
-  -webkit-transform: rotateY(180deg);
+  -webkit-transform: rotateY(0);
 }
-#dashboard > li:after {
+#dashboard > li:nth-child(1) .quizFront { background-image: url('images/dashboard_1.jpeg'); }
+#dashboard > li:nth-child(2) .quizFront { background-image: url('images/dashboard_2.jpeg'); }
+#dashboard > li:nth-child(3) .quizFront { background-image: url('images/dashboard_3.jpeg'); }
+#dashboard > li:nth-child(4) .quizFront { background-image: url('images/dashboard_4.jpeg'); }
+#dashboard > li:nth-child(5) .quizFront { background-image: url('images/dashboard_5.jpeg'); }
+#dashboard > li:nth-child(6) .quizFront { background-image: url('images/dashboard_6.jpeg'); }
+
+#dashboard .quizBack {
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #83582A;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: rotateY(180.5deg) translateZ(1px);
+}
+#dashboard > li .quizBack:before,
+#dashboard > li .quizBack:after {
   content: '';
   position: absolute;
   display: block;
@@ -112,9 +133,22 @@ body, html, #quizzesContainer {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #ccc;
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: rotateY(0deg);
+  margin: auto;
+}
+#dashboard > li .quizBack:before {
+  width: 10vw;
+  height: 10vw;
+  border-radius: 50%;
+  background-color: #222;
+  -webkit-transform: translateY(-3vw);
+}
+#dashboard > li .quizBack:after {
+  width: 0;
+  height: 0;
+  border-bottom: 12vw solid #222;
+  border-left: 4vw solid transparent;
+  border-right: 4vw solid transparent;
+  -webkit-transform: translateY(3vw);
 }
 
 #dashboard > li.done {
@@ -168,8 +202,8 @@ body, html, #quizzesContainer {
 #menu_complete {
   position: absolute;
   width: 100%;
-  height: 30vh;
-  background-color: #999;
+  height: 35vh;
+  background-color: #5C66DD;
   bottom: 0;
   right: 0;
   z-index: 100;
@@ -184,6 +218,25 @@ body, html, #quizzesContainer {
   display: none;
 }
 
+#answer {
+  width: 45vw;
+  height: 10vh;
+  margin: 4vh 10vw 0;
+  font-size: 7vh;
+  padding: 0 5vw;
+  background-color: #CBD8FF;
+  border: 1vw solid #0A2A8A;
+  color: #0A2A8A;
+}
+#checkAnswer {
+  width: 56vw;
+  height: 10vh;
+  margin: 5vh 10vw 0;
+  font-size: 5vh;
+  background-color: #0A2A8A;
+  border: 1vw solid #0A1C52;
+  color: #CBD8FF;
+}
 #completeCollapse {
   position: absolute;
   width: 15vh;
@@ -301,11 +354,11 @@ body, html, #quizzesContainer {
 /* ============ MELODI ================*/
 
 #quiz_melodi .note1 { background-color: #ff0000; }
-#quiz_melodi .note2 { background-color: #00ff00; }
-#quiz_melodi .note3 { background-color: #0000ff; }
-#quiz_melodi .note4 { background-color: #ffec00; }
-#quiz_melodi .note5 { background-color: #dc3cf1; }
-#quiz_melodi .note6 { background-color: #ffa500; }
+#quiz_melodi .note2 { background-color: #ffa500; }
+#quiz_melodi .note3 { background-color: #FDFD02; }
+#quiz_melodi .note4 { background-color: #00ff00; }
+#quiz_melodi .note5 { background-color: #0000ff; }
+#quiz_melodi .note6 { background-color: #E100FF; }
 
 #musicNote {
   text-align: center;
@@ -567,4 +620,107 @@ body, html, #quizzesContainer {
   height: 100%;
   z-index: 2;
   position: relative;
+}
+
+/* ============ FIND ROUTE ================*/
+#findrouteMessage {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  width: 62vw;
+  height: 15vh;
+  line-height: 7vh;
+}
+  
+#findRouteMap {
+  width: 100%;
+  height: 70vh;
+}
+#findRouteLoc {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 8vh;
+  height: 8vh;
+  background-color: #5C66DD;
+}
+#findRouteLoc.hidden {
+  display: none;
+}
+#findRouteLoc:before,
+#findRouteLoc:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto; 
+  width: 25px; 
+  height: 25px;
+}
+#findRouteLoc:before {
+  border: 3px solid #182292;
+  border-right-color: transparent;
+  border-radius: 50%;
+}
+#findRouteLoc:after {
+  width: 0;
+  height: 0; 
+  border-right: 13px solid #182292; 
+  border-top: 7px solid transparent; 
+  border-bottom: 7px solid transparent; 
+  -webkit-transform: translate(9px, -7px);
+}
+
+/* ============ PARTS ================*/
+
+#partsMessage {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  width: 62vw;
+  height: 15vh;
+  line-height: 7vh;
+}
+  
+#partsMap {
+  width: 100%;
+  height: 70vh;
+}
+#partsLoc {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 8vh;
+  height: 8vh;
+  background-color: #5C66DD;
+}
+#partsLoc.hidden {
+  display: none;
+}
+#partsLoc:before,
+#partsLoc:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto; 
+  width: 25px; 
+  height: 25px;
+}
+#partsLoc:before {
+  border: 3px solid #182292;
+  border-right-color: transparent;
+  border-radius: 50%;
+}
+#partsLoc:after {
+  width: 0;
+  height: 0; 
+  border-right: 13px solid #182292; 
+  border-top: 7px solid transparent; 
+  border-bottom: 7px solid transparent; 
+  -webkit-transform: translate(9px, -7px);
 }
