--- a/style.css
+++ b/style.css
@@ -36,11 +36,15 @@ body, html, #quizzesContainer {
 /* ============ INTRO ================*/
 
 #intro {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 90vh;
   width: 90vw;
   background-color: #CBD8FF;
   color: #CBD8FF;
   padding: 5vh 5vw;
+  z-index: 10;
 }
 #introContainer {
   background-color: #0A2A8A;
@@ -81,6 +85,7 @@ body, html, #quizzesContainer {
   list-style: none inside none;
   width: 84vw;
   height: 126vw;
+  z-index: 5;
 }
 
 #dashboard > li {
